--- a/estilos/style.css
+++ b/estilos/style.css
@@ -40,3 +40,22 @@ iframe#tela {
     height: 471px;
     width: 267px;
 }
+
+section#rsocial {
+    text-align: right;
+}
+
+section#rsocial img {
+    width: 50px;
+    margin: 20px;
+    border-radius: 50%;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.500);
+    box-sizing: border-box;
+}
+
+section#rsocial img:hover {
+    border: 2px solid white;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.600);
+    transform: translate(-3px, -3px);
+    transition: transform .3s;
+}
